trunk/NewArchive/65c8d615d7bae6434bc195ae58358787-ce759ceac3a1c87b565ff35b2f7d6b5c/output
+ g++ -std=c++11 -Wall -Wextra -pedantic main.cpp
main.cpp:3:8: error: stray ‘#’ in program
 please #include <cstdint>
        ^
main.cpp:4:8: error: stray ‘#’ in program
 please #include <limits>
        ^
main.cpp:6:8: error: stray ‘#’ in program
 please #include <iostream>
        ^
main.cpp:3:9: error: ‘include’ does not name a type
 please #include <cstdint>
         ^
